# probing

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Cargo.toml  Makefile  README.cn.md  README.md  conftest.py  deny.toml  index.html  make_wheel.py  pyproject.toml  pytest.ini  sitemap.xml  skills
examples/probing-acme/: README.md  pyproject.toml
examples/probing-acme/src/probing_acme/: __init__.py  magics.py
examples/probing-acme/src/probing_acme/skills/: catalog.yaml
probing/core/: Cargo.toml
probing/core/resources/: tables.yaml
probing/core/src/: config.rs  diagnostics.rs  lib.rs  runtime.rs  sync.rs  tracing.rs
probing/core/src/config/: store.rs
probing/core/src/core/: cluster.rs  data_source.rs  engine.rs  error.rs  extension.rs  memtable_sql.rs  mod.rs  plugin.rs  plugin_advanced.rs  probe_extension.rs  semantic_catalog.rs
probing/core/src/core/federation/: aggregate_pushdown.rs  cluster_executor.rs  convert.rs  fanout_scope.rs  federated_scan_exec.rs  global_catalog.rs  global_table.rs  mod.rs  query_guard.rs  rewrite.rs  route.rs  sql_gen.rs
probing/core/src/signal/: macos.rs  mod.rs
probing/core/src/storage/: distributed.rs  entity.rs  mem_store.rs  mod.rs  remote_client.rs  topology.rs
probing/core/src/trace/: mod.rs  span.rs  step.rs
probing/core/tests/: engine_complex_tests.rs  extension_routing_spec.rs  federation_tests.rs  test_helpers.rs
probing/crates/skills/: Cargo.toml
probing/crates/skills/src/: api.rs  backend.rs  catalog.rs  discovery.rs  interpret.rs  lib.rs  loader.rs  pyo3.rs  routing.rs  runner.rs
probing/extensions/nccl-profiler/: Cargo.toml  README.md
probing/extensions/nccl-profiler/benches/: callback_path.rs
probing/extensions/nccl-profiler/src/: events.rs  lib.rs  log.rs  plugin.rs  pool.rs  pool_config.rs  pool_pressure.rs  ring_config.rs  role.rs  shard.rs  state.rs  tables.rs  writer.rs
probing/extensions/nccl-profiler/src/abi/: mod.rs  profiler_v3.rs  profiler_v4.rs
probing/extensions/python/: Cargo.toml  build.rs
probing/extensions/python/src/: lib.rs  python.rs  setup.rs
probing/extensions/python/src/extensions/: pprof.rs  python.rs  torch.rs
probing/extensions/python/src/features/: config.rs  convert.rs  flamegraph.rs  mod.rs  native_bridge.rs  pprof.rs  py_result.rs  python_api.rs  skills_api.rs  stack_capture.rs  torch.rs  (+4 more)
probing/memtable/: Cargo.toml
probing/memtable/benches/: memh_report.rs  memtable_report.rs
probing/memtable/src/: buf.rs  cache.rs  dedup.rs  discover.rs  docs.rs  error.rs  layout.rs  lib.rs  memtable.rs  raw.rs  refcount.rs  row.rs  schema.rs  sync.rs  table.rs  value.rs  writer.rs
probing/memtable/src/memc/: codec.rs  compactor.rs  reader.rs  store.rs  tests.rs  writer.rs
probing/memtable/src/memh/: codec.rs  layout.rs  mod.rs  table.rs
probing/memtable/tests/: chaos_stress.rs  smoke.rs
probing/server/: API.md  AUTH.md  Cargo.toml
probing/server/src/: asset.rs  auth.rs  cluster_http.rs  cluster_report_backoff.rs  engine.rs  engine_lifecycle.rs  extensions.rs  lib.rs  memtable_ext.rs  pulsing_sync.rs  report.rs  torchrun_cluster.rs  vars.rs
probing/server/src/mcp/: helpers.rs  mod.rs  skill_backend.rs
probing/server/src/server/: apis.rs  cluster.rs  cluster_fanout.rs  cluster_query.rs  config.rs  error.rs  extension_handler.rs  file_api.rs  health.rs  local_query.rs  middleware.rs  mod.rs  profiling.rs  query_dto.rs  runtime.rs  spa.rs  sql_guard.rs  system.rs  training.rs
probing/server/tests/: auth_complex_tests.rs  file_api_complex_tests.rs  hierarchical_cluster_report.rs  training_observability_tests.rs
web/: Cargo.toml  DESIGN.md  Dioxus.toml  MIGRATION.md  README.md  dist  index.html
web/.cargo/: config.toml
web/assets/: tailwind.css
web/src/: app.rs  hooks.rs  main.rs  rl_contract.rs  styles.rs
web/src/agent/: cluster.rs  interpret.rs  llm.rs  mod.rs  page_tools.rs  playbook.rs  routing.rs  runner.rs  skill.rs  skills_backend.rs  source_bridge.rs
web/src/api/: activity.rs  analytics.rs  cluster.rs  cpu.rs  gpu.rs  mod.rs  overhead.rs  overview.rs  profiler.rs  profiling.rs  pulsing.rs  pytorch.rs  repl.rs  rl.rs  skills.rs  stack.rs  timeseries.rs  trace.rs  traces.rs  training.rs
web/src/components/: app_overlays.rs  callstack_view.rs  card.rs  card_view.rs  chrome_tracing_iframe.rs  collapsible_card.rs  colors.rs  common.rs  cpu_threads_table.rs  data.rs  dataframe_view.rs  global_command_panel.rs  header.rs  icon.rs  investigation_context_bar.rs  investigation_context_hint.rs  keyboard_shortcuts.rs  layout.rs  markdown_view.rs  mod.rs  nav_drawer.rs  overlay_shell.rs  page.rs  page_context_sync.rs  poll_status.rs  profile_snapshot_bar.rs  profiling_sidebar_hint.rs  sidebar.rs  source_viewer.rs  span_timeline.rs  stat_card.rs  table_view.rs  value_list.rs
web/src/components/agent/: chat.rs  mod.rs  panel.rs  step_card.rs  view_route.rs
web/src/components/flamegraph/: diff.rs  explorer.rs  logic.rs  mod.rs  model.rs  widgets.rs
web/src/components/overhead/: mod.rs  panel.rs
web/src/components/profiling/: mod.rs  sections.rs  timeline.rs
web/src/components/rl/: metrics_line_chart.rs  mod.rs
web/src/components/sidebar/: correlate.rs  mod.rs  monitors.rs  nav_item.rs  resize.rs  tasks.rs
web/src/components/timeline_viewer/: overview.rs  parse.rs  viewer.rs
web/src/components/workspace/: mod.rs  panel_shell.rs  split.rs  surface.rs
web/src/hooks/: mod.rs
web/src/overhead/: metrics.rs  mod.rs  sql.rs
web/src/pages/: activity.rs  analytics.rs  chrome_tracing.rs  cluster.rs  dashboard.rs  mod.rs  overview.rs  profiler.rs  profiling.rs  pulsing.rs  python.rs  stack.rs  timeseries.rs  traces.rs  tracing.rs  training.rs
web/src/pages/python/: active.rs  catalog.rs  dialogs.rs  mod.rs
web/src/pages/rl/: inference.rs  mod.rs
web/src/state/: agent.rs  commands.rs  investigation.rs  investigation_url.rs  mod.rs  overlays.rs  page_context.rs  profiling.rs  rl.rs  scroll_lock.rs  source_viewer.rs  stack.rs  ui_tasks.rs
web/src/utils/: callframe.rs  error.rs  markdown.rs  mod.rs  source_ref.rs  tracing_viewer.rs
(+609 files in other folders)
