[project]
name = "probing"
version = "0.2.2"
description = "Dynamic Performance Profiler for Distributed AI"
readme = "README.md"
authors = [
    { name = "reiase", email = "reiase@gmail.com" }
]
license = { text = "Apache-2.0" }
license-files = ["LICENSE"]
requires-python = ">=3.7"
dependencies = []

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

keywords = ["debug", "performance", "profiling", "ai", "distributed", "monitoring"]

[project.urls]
Homepage = "https://github.com/reiase/probing"
Repository = "https://github.com/reiase/probing"
Documentation = "https://github.com/reiase/probing"
Issues = "https://github.com/reiase/probing/issues"

[project.scripts]
probing = "probing.cli.__main__:main"

[tool.maturin]
module-name = "probing._core"
manifest-path = "Cargo.toml"
python-source = "python"
compatibility = "linux"
bindings = "pyo3"
cargo-extra-args = "--features extension-module"
include = ["probing.pth", "probing_hook.py"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "python/probing"]
pythonpath = ["python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--color=yes",
    "--durations=10",
    "--showlocals",
    "--strict-markers",
    "--doctest-modules",
    "--ignore=python/probing/cli/__main__.py",
]
norecursedirs = [
    ".git",
    ".tox",
    ".venv",
    "venv",
    "env",
    "dist",
    "build",
    "__pycache__",
]
markers = [
    "integration: marks tests that require integration resources",
    "slow: marks tests that are expected to be slow",
    "unit: marks tests that can run in isolation",
]
filterwarnings = [
    "ignore::DeprecationWarning:pandas.*",
    "ignore::DeprecationWarning:numpy.*",
    "error::RuntimeWarning",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py37"]
include = '\.pyi?$'
