[package]
name = "probing-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for the Probing framework, providing essential data analysis and inspection capabilities"

[lints.rust]
rust_2018_idioms = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = "allow"
nursery = "allow"
upper_case_acronyms = "allow"
enum_variant_names = "allow"
too_many_arguments = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"

[lib]
crate-type = ["rlib"]

[dependencies]
probing-proto = { path = "../proto" }
probing-macros = { path = "../macros" }
probing-memtable = { path = "../memtable" }

anyhow = { workspace = true }
arrow = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

async-trait = "0.1.83"
datafusion = { workspace = true }
futures = "0.3.31"
ureq = { version = "3.1.2", default-features = false, features = ["rustls"] }
sled = "0.34.7"
bincode = "1.3.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.5"
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
