[package]
name = "probing-server"
description = "Probing Server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true


[features]
extension-module = ["probing-python/extension-module"]
gpu = ["dep:probing-gpu"]
gpu-cuda = ["gpu", "probing-gpu/cuda"]
kmsg = ["probing-cc/kmsg"]
default = ["extension-module", "kmsg", "rmcp"]
rmcp = ["dep:rmcp", "dep:probing-skills"]

[dependencies]
probing-cc = { path = "../extensions/cc", default-features = false }
probing-gpu = { path = "../extensions/gpu", optional = true }
probing-memtable = { path = "../memtable" }
probing-python = { path = "../extensions/python", default-features = false }
probing-proto = { path = "../proto" }
probing-hccl-shim = { path = "../extensions/hccl-shim" }
probing-nccl-profiler = { path = "../extensions/nccl-profiler" }
probing-core = { path = "../core" }
probing-store = { path = "../crates/store" }
probing-skills = { path = "../crates/skills", optional = true }

datafusion = { workspace = true }

anyhow = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

async-trait = "0.1.83"
bytes = "1"
nu-ansi-term = "0.50.1"
base64 = "0.21.5"
ureq = { workspace = true, features = ["json"] }
axum = { version = "0.8.1", default-features = false, features = [
    "tokio",
    "http1",
    "query",
    "json",
    "macros",
    "ws",
    "tower-log",
] }
http-body-util = { version = "0.1" }
hyper = { version = "1.3.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "http1", "tokio"] }
serde_urlencoded = "0.7.1"
futures-util = "0.3"
rmcp = { version = "1.8.0", features = ["server", "macros", "transport-streamable-http-server", "schemars"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17.0", default-features = false, features = ["chrono"] }

[dev-dependencies]
tempfile = "3.8"
probing-proto = { path = "../proto" }
axum = { version = "0.8.1", default-features = false, features = [
    "tokio",
    "http1",
    "json",
    "macros",
] }
tokio = { workspace = true, features = ["rt-multi-thread", "net"] }
