[package]
name = "probing-skills"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Diagnostic skill loader, interpreter, and runner (shared by CLI and Web)"

[features]
python-bridge = ["dep:pyo3"]

[dependencies]
probing-proto = { path = "../../proto", default-features = false }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
async-trait = "0.1"
pyo3 = { version = "0.29.0", optional = true, default-features = false, features = [
    "macros",
] }

[dev-dependencies]
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt", "macros"] }
