[package]
name = "probing-python"
description = "Python support for probing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
extension-module = ["pyo3/extension-module"]
tracing = []
default = ["extension-module", "tracing"]

[dependencies]
probing-cc = { path = "../cc" }
probing-core = { path = "../../core" }
probing-memtable = { path = "../../memtable" }
probing-proto = { path = "../../proto" }
probing-store = { path = "../../crates/store" }
probing-cli = { path = "../../cli" }

anyhow = { workspace = true }
ctor = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
html-escape = "0.2"

include_dir = "=0.7.4"
backtrace = { version = "0.3", features = ["cpp_demangle", "std"] }
cpp_demangle = "0.5.1"
rustc-demangle = "0.1.27"
pyo3 = { version = "0.29.0", default-features = false, features = [
    "abi3",
    "abi3-py310",
    # "extension-module",
    "auto-initialize",
    "macros"
] }
inferno = { version = "0.12.1", default-features = false, features = [
    "nameattr",
    "multithreaded",
] }
# Do not enable `frame-pointer`: its stack walk calls `validate()` which may
# invoke `pipe()`/`fcntl()` from the SIGPROF handler and kill the process with
# no logs (especially on macOS + PyTorch). Use backtrace-rs unwinding instead.
pprof = { version = "0.14.0", features = [
    "cpp",
    "flamegraph",
] }
lazy_static = "1.4.0"
async-trait = "0.1.83"
signal-hook-registry = "1.4.2"
regex = ">=1.6.0"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.8"

[build-dependencies]
pyo3-build-config = "0.29.0"
